05-usage/templates/11-pod-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: default
spec:
  containers:
    - image: nginx:latest
      ports:
        - containerPort: 80
          name: web
          protocol: TCP
      name: nginx
      imagePullPolicy: IfNotPresent
