05-usage/templates/31-service-resizer.yaml
apiVersion: v1
kind: Service
metadata:
  name: resizer
  namespace: default
spec:
  ports:
    - name: web
      port: 80
      targetPort: 8080
  selector:
    app: resizer
