05-usage/templates/35-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      nodePort: 32180
  selector:
    app: main
  type: NodePort
