05-usage/templates/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: main
spec:
  rules:
    - host: main.akop.pw
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main
                port:
                  name: web
  tls:
    - hosts:
        - main.akop.pw
      secretName: akop
